# Mozarella

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
config/: env.bat  env_example.bat
shaders/: background.vs  cube.vs  depth.fs  light.fs  light.vs  material.fs  mesh.fs  mesh.vs  screen.fs  simplemesh.fs  spheretest.fs  spheretest.vs
src/: main.cpp
src/engine/: Engine.cpp  Engine.h
src/engine/assets/: Assets.cpp  Assets.h  Ressources.h
src/engine/common/: ColourGroup.h
src/engine/common/math/: MozMath.h
src/engine/common/math/algorithm/: MozMathSubdivision.cpp  MozMathSubdivision.h
src/engine/context/: GraphicContext.cpp  GraphicContext.h
src/engine/editor/: ColorEditor.cpp  ColorEditor.h  Editor.h  QuickEditor.cpp  QuickEditor.h
src/engine/event/: Event.h
src/engine/object/: GraphicObject.cpp  GraphicObject.h  ObjectFactory.cpp  ObjectFactory.h
src/engine/object/basics/: ColoredCube.cpp  ColoredCube.h  Cube.cpp  Cube.h  LightSource.cpp  LightSource.h  Rectangle.cpp  Rectangle.h  Sphere.cpp  Sphere.h  TexturedCube.cpp  TexturedCube.h
src/engine/object/model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h
src/engine/scene/: Scene.cpp  Scene.h  SceneFactory.cpp  SceneFactory.h
src/engine/scene/implementations/: SceneCamera.cpp  SceneColor.cpp  SceneCube.cpp  SceneCube.h  SceneEdit.cpp  SceneEdit.h  SceneLight.cpp  SceneLight.h  SceneMesh.cpp  SceneSphere.cpp  SceneSphere.h
src/engine/scene/implementations/concepts/: SceneCamera.cpp  SceneCamera.h  SceneColor.h  SceneCube.cpp  SceneCubemap.cpp  SceneCubemap.h  SceneEdit.h  SceneFramebuffer.cpp  SceneFramebuffer.h  SceneMesh.cpp  SceneMesh.h  SceneStencil.cpp  SceneStencil.h  SceneTransparency.cpp  SceneTransparency.h
src/engine/shader/: Shader.cpp  Shader.h
src/engine/texture/: Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h
src/engine/view/: Camera.cpp  Camera.h  View.cpp  View.h  ViewFactory.cpp  ViewFactory.h
src/engine/view/implementations/: ColorView.cpp  ColorView.h  Simple3DView.cpp  Simple3DView.h
src/engine/window/: Window.cpp  Window.h
